# claude-mirror

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: publish.yml  test.yml
claude_mirror/: __init__.py  _byo_wizard.py  _conflicts.py  _constants.py  _diff.py  _filelock.py  _health.py  _mount.py  _ncdu.py  _presence.py  _progress.py  _prompt.py  _redact.py  _stats.py  _tree.py  _update_check.py  _verify.py  _watch_once_state.py  _webhook_url.py  cli.py  config.py  drive.py  events.py  hash_cache.py  ignore.py  install.py  manifest.py  merge.py  notifier.py  profiles.py  pubsub.py  retry.py  slack.py  snapshots.py  sync.py  throttle.py
claude_mirror/backends/: __init__.py  _util.py  dropbox.py  ftp.py  googledrive.py  onedrive.py  s3.py  sftp.py  smb.py  webdav.py
claude_mirror/notifications/: __init__.py  longpoll.py  polling.py  pubsub.py  webhooks.py
docs/: README.md  admin.md  cli-reference.md  conflict-resolution.md  faq.md  profiles.md  scenarios.md
docs/backends/: dropbox.md  ftp.md  google-drive.md  onedrive.md  s3.md  sftp.md  smb.md  webdav.md
docs/profiles/: agents-md.yaml
skills/: claude-mirror.md
tests/: conftest.py  test_DIAG043_streams.py  test_auth_backup_restore.py  test_auto_pubsub_setup.py  test_byo_wizard.py  test_clone.py  test_completion.py  test_completion_powershell.py  test_config.py  test_conflicts.py  test_constants.py  test_cron_sync.py  test_delete_dry_run.py  test_diff.py  test_doctor.py  test_doctor_dropbox_deep.py  test_doctor_ftp_deep.py  test_doctor_googledrive_deep.py  test_doctor_onedrive_deep.py  test_doctor_s3_deep.py  test_doctor_sftp_deep.py  test_doctor_smb_deep.py  test_doctor_webdav_deep.py  test_dropbox_backend.py  test_dyn_comp.py  test_exclude_patterns.py  test_filelock.py  test_ftp_backend.py  test_googledrive_backend.py  test_health.py  test_history_filter.py  test_ignore_file.py  test_init_wizard.py  test_install_completion.py  test_json_output.py  test_load_paths_narrow.py  test_log_follow.py  test_manifest_filelock.py  test_merge_resolver.py  test_mount.py  (+47 more)
