[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-mirror"
version = "0.5.53"
description = "Mirror & sync Claude Code project markdown across machines + cloud backends (Google Drive, Dropbox, OneDrive, WebDAV, SFTP) with snapshots and Tier 2 multi-backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Alessio Bravi" },
]
keywords = [
    "sync", "mirror", "backup", "snapshot", "claude", "claude-code",
    "markdown", "google-drive", "dropbox", "onedrive", "webdav", "sftp",
    "ssh", "multi-backend",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: File Sharing",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.100",
    "google-cloud-pubsub>=2.18",
    "plyer>=2.1",
    "paramiko>=3.0",   # SFTP backend (always installed — see [project.optional-dependencies] for back-compat aliases)
    "dropbox>=12.0",   # Dropbox backend (always installed — see [project.optional-dependencies] for back-compat aliases)
    "msal>=1.24",      # OneDrive backend (always installed — see [project.optional-dependencies] for back-compat aliases)
]

# Project URLs — rendered in the right-hand sidebar of the PyPI page
# under "Project links". Order matters: PyPI shows them top-to-bottom
# in the order declared, so the most-useful destinations come first.
# IMPORTANT: this subtable MUST come AFTER every flat field of
# [project] (description, dependencies, classifiers, etc.) — once
# `[project.urls]` is opened, subsequent flat assignments are
# interpreted as keys under `urls`, NOT as flat [project] fields.
[project.urls]
Homepage      = "https://github.com/alessiobravi/claude-mirror"
Repository    = "https://github.com/alessiobravi/claude-mirror"
Changelog     = "https://github.com/alessiobravi/claude-mirror/blob/main/CHANGELOG.md"
Documentation = "https://github.com/alessiobravi/claude-mirror/blob/main/README.md"
Issues        = "https://github.com/alessiobravi/claude-mirror/issues"

# Back-compat aliases: as of v0.5.10 every backend ships in the base install.
# These extras are now no-ops, kept so historical install commands like
# `pipx install 'claude-mirror[dropbox]'` keep working without erroring.
[project.optional-dependencies]
dropbox = []
onedrive = []
all = []
# Development extras — pytest + helpers for the test suite.
# Install with: pipx install -e '.[dev]'  or  pip install -e '.[dev]'
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.10",
    "responses>=0.25",
]

[project.scripts]
claude-mirror         = "claude_mirror.cli:cli"
claude-mirror-install = "claude_mirror.install:install_cli"

[tool.hatch.build.targets.wheel]
packages = ["claude_mirror"]

# Bundle the Claude Code skill source inside the wheel so PyPI users
# (who don't have the repo's skills/ directory next to the package)
# can run `claude-mirror-install` and have the skill installation step
# succeed. The file is mapped to claude_mirror/_skill/claude-mirror.md
# inside the wheel; install.py:_find_skill_source() looks there first.
[tool.hatch.build.targets.wheel.force-include]
"skills/claude-mirror.md" = "claude_mirror/_skill/claude-mirror.md"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

# Third-party SDKs without bundled type stubs. Each of these either
# ships no inline annotations + no py.typed marker, or has stubs that
# aren't on PyPI under a `types-*` name we want to take a dependency on.
# `ignore_missing_imports = true` is the supported posture per the mypy
# docs — we are NOT writing local stubs for these.
[[tool.mypy.overrides]]
module = [
    "paramiko.*",
    "dropbox.*",
    "msal.*",
    "googleapiclient.*",
    "google.api_core.*",
    "google.cloud.*",
    "google.auth.*",
    "google.oauth2.*",
    "google_auth_oauthlib.*",
    "yaml.*",
    "requests.*",
    "plyer.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    # google-api-python-client emits a DeprecationWarning under Python 3.13+
    "ignore::DeprecationWarning:google",
    "ignore::DeprecationWarning:googleapiclient",
]
